--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.3",
     "astro": "^4.5.14",
+    "cobe": "^0.6.3",
     "flowbite": "^2.3.0",
+    "globe": "^0.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
