--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.3",
     "astro": "^4.5.14",
+    "astro-lenis": "^1.0.0",
     "cobe": "^0.6.3",
+    "lenis": "^1.1.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
